tests/ui/traits/project-modulo-regions.without_clause.stderr
error: evaluate(Binder(TraitPredicate(<Helper as HelperTrait>, polarity:Positive), [])) = Ok(EvaluatedToOk)
  --> $DIR/project-modulo-regions.rs:50:5
   |
LL | fn test(val: MyStruct) where Helper: HelperTrait  {
   |                                      ----------- predicate
...
LL |     test(val);
   |     ^^^^

error: aborting due to previous error

